# amd-freq-guard

./: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
src/: App.vue  app.js  main.js  router.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: autostart.rs  constants.rs  lib.rs  main.rs  monitor.rs  notification.rs  power_plan.rs  power_settings_preferences_store.rs  settings.rs  settings_store.rs  trigger_action.rs  updater.rs
src-tauri/src/PowerPlanUtils/: GetPowerPlans.rs  PowerPlanController.rs  mod.rs
src/layouts/: MainLayout.vue
src/stores/: settings.js
src/styles/: colors.css
src/utils/: Constants.js  invoker.js  native-notification.js  toast.js
src/views/: AdminRequired.vue  PowerPlan.vue  TriggerAction.vue
