[package]
name = "amd-freq-guard"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "amd_freq_guard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33.1"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-store = "2"
encoding_rs = "0.8.31"
calcmhz = "*"
uuid = { version = "1.0", features = ["v4"] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.10"
lazy_static = "1.4"
